# autocontent

./: .gitignore  README.md  pyproject.toml  toolset.py  transcribe.py
autocontent/: __init__.py  cli.py  exceptions.py  gpt.py  prompt_templates.py  subs.py  text_analysis.py  transcribe.py  utils.py  video.py
autocontent/tests/: conftest.py  test_gpt.py  test_subs.py  test_text_analysis.py  test_utils.py  test_video.py  tests.py
