[tool.poetry]
name = "autocontent"
version = "0.1.0"
description = ""
authors = ["Creohex <paradise.source@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
pytube-cli = "^0.0.1"
autosub = {path = "/Users/creohex/github/autosub"}
youtube-transcript-api = "^0.6.0"
click = "^8.1.3"
moviepy = "^1.0.3"
pygame = "^2.3.0"
pytest = "^7.3.1"
pytube = "^12.1.3"
youtube-dl = "^2021.12.17"
yt-dlp = "^2023.3.4"
mock = "^5.0.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
